<resources>
    <!-- App Name -->
    <string name="app_name">EatsBuddy</string>

    <!-- Login Screen -->
    <string name="app_logo_description">EatsBuddy app logo</string>
    <string name="welcome_title">Welcome to EatsBuddy</string>
    <string name="login_subtitle">Plan meals, save time, eat better</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login_button">Log In</string>
    <string name="no_account_text">Don\'t have an account?</string>
    <string name="sign_up_text">Sign Up</string>
    <string name="or_text">OR</string>

    <!-- Register Screen -->
    <string name="register_title">Create Your Account</string>
    <string name="register_subtitle">Join EatsBuddy and start your meal planning journey</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="register_button">Create Account</string>
    <string name="have_account_text">Already have an account?</string>
    <string name="login_text">Log In</string>
</resources>